--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==0.9
-Jinja2==2.6
-Werkzeug==0.8.3
 beautifulsoup4==4.1.3
-requests==1.1.0
-wsgiref==0.1.2
+Flask==0.10.1
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+requests==2.7.0
+Werkzeug==0.10.4
