--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 beautifulsoup4==4.4.1
-Flask==0.10.1
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+Flask==1.1.1
+idna==2.8
 itsdangerous==0.24
-Jinja2==2.8
+Jinja2==2.10.3
 MarkupSafe==0.23
-requests==2.9.1
-Werkzeug==0.11.3
-wheel==0.24.0
+requests==2.22.0
+urllib3==1.25.6
+Werkzeug==0.16.0
